# image-categorizer-py

./: .gitignore  Pipfile  README.md  image_categorizer.py  main.py  pyproject.toml
kmeans/: kmeans.py
